# Shield

./: .dockerignore  .gitignore  AGENTIC_AI_DOMGUARD_GUIDE.md  AUDIT_READINESS.md  BENCHMARKS.md  CHANGELOG.md  CHANGES-FROM-ORIGINAL.md  CHEATSHEET.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINGERPRINTING_IMPLEMENTATION_GUIDE.md  INSTALL.md  LICENSE  MIGRATION.md  MOBILE_FINGERPRINTING.md  NATION_STATE_SECURITY.md  PROTOCOL.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_V2.md  THREAT_MODEL.md  docker-compose.yml  security-report.md
.domguard/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
.taskguard/: config.toml
android/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
android/shield/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
branding/: branding_generator.sh
browser/: Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  vitest.config.ts
browser/js/: fetch-hook.ts  index.ts  types.ts
browser/src/: lib.rs
browser/tests/: fetch-hook.test.ts  shield-browser.test.ts
browser/tests/__mocks__/: shield_browser.js
c/: Makefile  README.md
c/include/: pqhybrid.h  shield.h  shield_fingerprint.h
c/scripts/: build_and_test_pq.sh
c/src/: pqhybrid.c  shield.c  shield_fingerprint.c
c/tests/: test_pqhybrid.c  test_shield.c
csharp/: README.md  Shield.sln
csharp/Shield/: Exchange.cs  GroupEncryption.cs  IdentityProvider.cs  KeyRotationManager.cs  PqHybrid.cs  RatchetSession.cs  RecoveryCodes.cs  Shield.cs  Shield.csproj  Signatures.cs  StreamCipher.cs  Totp.cs
csharp/Shield.Tests/: ChannelSessionVectorsTests.cs  PqKexVectorsTests.cs  Shield.Tests.csproj  ShieldTests.cs  StreamCipherEofTests.cs  V4VectorsTests.cs
examples/browser-integration/: README.md  server.py
examples/confidential-computing/: README.md
examples/hsm/: README.md  aws_cloudhsm.py  hashicorp_vault.py
examples/opaque-containers/: DEMO.md  Dockerfile.example  LICENSED_CONTAINERS.md  README.md  build-opaque.sh  run-opaque.sh
go/: README.md  go.mod
go/shield/: bench_test.go  channel.go  channel_test.go  exchange.go  fingerprint.go  group.go  identity.go  pqhybrid.go  pqhybrid_test.go  ratchet.go  rotation.go  shield.go  shield_test.go  signatures.go  stream.go  stream_eof_test.go  totp.go  v4_vectors_test.go
ios/: Package.swift  README.md  Shield.podspec
java/: README.md  build.gradle
javascript/: README.md  package-lock.json  package.json
javascript/integrations/: express.js
javascript/src/: channel.js  exchange.js  fingerprint.js  group.js  identity.js  index.d.ts  index.js  pqhybrid.mjs  ratchet.js  rotation.js  shield.js  signatures.js  stream.js  totp.js  webcrypto_polyfill.mjs
javascript/test/: channel.test.js  express.test.js  pqhybrid.test.mjs  shield.test.js  stream_eof.test.js  v4_vectors.test.js
kotlin/: README.md  build.gradle.kts
python/: README.md  pyproject.toml
python/examples/: pq_hybrid_demo.py
python/shield/: __init__.py  channel.py  cli.py  core.py  exchange.py  fingerprint.py  group.py  identity.py  pqhybrid.py  ratchet.py  rotation.py  signatures.py  stream.py  totp.py
python/shield/integrations/: __init__.py  browser.py  fastapi.py  fido2_api.py  flask.py  pgvector_api.py  protection.py
python/shield/integrations/confidential/: __init__.py  aws_nitro.py  azure_maa.py  base.py  gcp_sev.py  intel_sgx.py  middleware.py
python/shield/integrations/django/: __init__.py
python/tests/: __init__.py  test_channel.py  test_confidential_attestation_failclosed.py  test_core.py  test_core_security_fix.py  test_exchange.py  test_fastapi_content_length.py  test_group.py  test_identity.py  test_integration_demo_gate.py  test_integrations.py  test_pq_kex_vectors.py  test_pqhybrid.py  test_ratchet.py  test_rotation.py  test_signatures.py  test_stream.py  test_totp.py  test_v4_vectors.py
shield-core/: Cargo.toml  README.md
shield-core/benches/: encrypt_bench.rs
shield-core/src/: channel.rs  channel_async.rs  error.rs  exchange.rs  fingerprint.rs  group.rs  identity.rs  lib.rs  password.rs  pqhybrid.rs  random.rs  ratchet.rs  rotation.rs  shield.rs  signatures.rs  stream.rs  totp.rs  wasm.rs
shield-core/src/confidential/: base.rs  jwt.rs  maa.rs  mod.rs  nitro.rs  openapi.rs  sev.rs  sgx.rs
shield-core/src/fido2/: config.rs  credential.rs  error.rs  manager.rs  mod.rs
shield-core/src/pgvector/: client.rs  config.rs  error.rs  mod.rs  vector.rs
shield-core/tasks/backend/: backend-001.md  backend-002.md  backend-003.md  backend-004.md  backend-005.md
shield-core/tasks/setup/: 001-project-setup.md
shield-core/tasks/testing/: testing-001.md
shield-core/tests/: interop.rs
shield-proxy/: Cargo.toml  Dockerfile
shield-proxy/deploy/: docker-compose.yml  shield-proxy.service  shield-proxy.toml
shield-proxy/src/: config.rs  dns.rs  lib.rs  main.rs  metrics.rs  protocol.rs  proxy.rs  redundancy.rs  transport.rs
swift/: Package.swift  README.md
tasks/api/: api-002.md  api-003.md  api-005.md  api-006.md  api-007.md
tasks/backend/: backend-002.md  backend-003.md  backend-004.md  backend-006.md  backend-007.md  backend-009.md  backend-012.md  backend-013.md  backend-015.md  backend-016.md  backend-017.md  backend-018.md  backend-019.md  backend-022.md  backend-023.md  backend-024.md  backend-025.md  backend-026.md  backend-027.md  backend-028.md  backend-029.md  backend-030.md  backend-031.md  backend-032.md  backend-033.md  backend-034.md  backend-035.md  backend-036.md  backend-038.md  backend-039.md  backend-040.md  backend-041.md  backend-042.md  backend-043.md  backend-044.md  (+3 more)
tests/: channel_session_vectors.json  interop.py  pq_kex_vectors.json  test_cheatsheet.py  test_cross_language.py  test_cross_language_v2.py  test_interop.py  test_padding_validation.py  v2_test_vectors.json  v3_test_vectors.json  v4_test_vectors.json
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
(+197 files in other folders)
