# ============================================================================
# Guard8.ai - High Quality Code -> Great Results
# YOU ARE NOT ALLOWED TO CHANGE THIS FILE UNLESS EXPLICITLY ASKED.
# ============================================================================

[package]
name = "shield-browser"
version = "1.0.0"
edition = "2021"
authors = ["Guard8.ai"]
description = "Shield Browser SDK - Transparent auto-decryption for web applications"
license = "MIT"
repository = "https://github.com/Guard8-ai/Shield"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shield-core = { path = "../shield-core", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Response",
    "ResponseInit",
    "Headers",
    "Request",
    "RequestInit",
] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.21"
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true

# ============================================================================
# Lints - High Quality Code -> Great Results
# YOU ARE NOT ALLOWED TO CHANGE THIS FILE UNLESS EXPLICITLY ASKED.
# ============================================================================
[lints.rust]
dead_code = "deny"
unused = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
derivable_impls = "allow"
should_implement_trait = "allow"
needless_range_loop = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"
case_sensitive_file_extension_comparisons = "allow"
