[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-crypto"
version = "2.2.0"
description = "Authenticated symmetric encryption library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eliran Sabag", email = "admin@gibraltarcloud.dev"}
]
keywords = ["cryptography", "encryption", "security", "post-quantum", "symmetric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# Post-quantum hybrid key exchange (shield.pqhybrid). Optional so the core library
# stays dependency-free; only users who need ML-KEM/X25519 install this extra.
# ML-KEM requires cryptography >= 46 (OpenSSL 3.5 / AWS-LC / BoringSSL).
pq = [
    "cryptography>=46.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "cryptography>=46.0",
]

[project.urls]
Homepage = "https://github.com/Dikestra.ai/Shield"
Documentation = "https://github.com/Dikestra.ai/Shield#readme"
Repository = "https://github.com/Dikestra.ai/Shield"
Issues = "https://github.com/Dikestra.ai/Shield/issues"

[project.scripts]
shield = "shield.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
