[package]
name = "shield-wasm"
version = "1.0.0"
authors = ["Guard8.ai"]
edition = "2021"
description = "EXPTIME-secure encryption - WebAssembly Module"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
