[package]
name = "shield-wasm"
version = "1.0.0"
authors = ["Guard8.ai"]
edition = "2021"
description = "EXPTIME-secure encryption - WebAssembly Module"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use shield-core as single source of truth
shield-core = { path = "../shield-core", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true

# ============================================================================
# Lints - Strict mode: fail on warnings and clippy
# ============================================================================
[lints.rust]
dead_code = "deny"
unused = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
derivable_impls = "allow"
should_implement_trait = "allow"
needless_range_loop = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"
case_sensitive_file_extension_comparisons = "allow"
